Issue #19. Create generic code for link button in _global.scss file. Fix spacing issues on sass.

--- a/static/sass/partials/_content.scss
+++ b/static/sass/partials/_content.scss
@@ -1,45 +1,31 @@
-.content{
+.content {
   padding-top: 40px;
 }
-.content-wrapper{
+.content-wrapper {
   background-color: $secondary-bg;
-  .content-wrapper2{
-    h2{
+  .content-wrapper2 {
+    h2 {
       text-align: center;
       margin: 50px;
       margin-bottom: 15px;
       font-weight: bolder;
     }
 
-    p{
+    p {
       text-align: center;
     }
 
-   .button{
+   .link-btn {
       text-align: center;
-      .sponsor-button{
-        text-transform: uppercase;
-        font-size: 15px;
-        font-weight: bold;
-        font-family: $text-font;
-        color: $secondary-color;
-        border: 1px solid $secondary-color;;
-        border-radius: 10px;
-        border-color: $secondary-color;
-        padding: 20px;
-        background-color: transparent;
-        padding-left: 30px;
-        padding-right: 30px;
-        margin: 40px;
-        margin-bottom: 70px;
-      }
+      margin: 70px;
+      margin-bottom: 95px;
     }
 
-    h4{
+    h4 {
       text-align: center;
     }
 
-    .sponsors-image{
+    .sponsors-image {
       text-align: center;
       margin-bottom: 50px;
     }
